--- a/visage-graphics-rs/Cargo.toml
+++ b/visage-graphics-rs/Cargo.toml
@@ -3,8 +3,18 @@ name = "visage-graphics-rs"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["rwh_06"]
+"rwh_05" = ["dep:raw-window-handle"]
+"rwh_06" = ["dep:raw-window-handle-06"]
+
 [dependencies]
 visage-graphics-sys = { path = "visage-graphics-sys" }
+widestring = "1.2"
+thunderdome = "0.6.1"
+bitflags = "2.9.0"
+raw-window-handle = { version = "0.5", features = ["std"], optional = true }
+raw-window-handle-06 = { package = "raw-window-handle", version = "0.6", optional = true }
 
 [dev-dependencies]
 winit = { version = "0.30.9", default-features = false, features = ["x11", "rwh_06"] }
